iptables/rules.v4
###################################################################################################
# Policy
###################################################################################################
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
###################################################################################################
# General rules
###################################################################################################
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
## Localhost ##
-A OUTPUT -d 127.0.0.1 -j ACCEPT
###################################################################################################
# Input
###################################################################################################
## nask ##
-A INPUT -s 172.19.243.0/24 -j ACCEPT
###################################################################################################
# Output
###################################################################################################
## DNS##
-A OUTPUT -d 193.59.201.24 -j ACCEPT
-A OUTPUT -d 195.187.244.8 -j ACCEPT
## PING ##
-A OUTPUT -p icmp --icmp-type 8 -j ACCEPT
## nask ##
-A OUTPUT -d 172.19.243.0/24 -j ACCEPT
## pypi.python.org
-A OUTPUT -d 151.101.12.223 -j ACCEPT

COMMIT
